<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lokacija"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lokacija" />
 	<TextView
        android:id="@+id/razdalja"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/razdalja" />

 	<TextView
 	    android:id="@+id/kompas"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/kompas" />

 	<org.osmdroid.views.MapView
    	android:id="@+id/openmapview"
     	android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
</LinearLayout>